recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:2: error: Missing closing brace `}' assumed here
def pentaKoch(levels:Int, length:Double) {
^