recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
	if (levels == 0)
	{
		avance(length)
	}
	else 
	{
		pentaKoch(levels-1,length/3)
		gauche(72.0)
		pentaKoch(levels-1,length/3)
		droite(72.0)
		pentaKoch(levels-1,length/3)
		droite(72.0)
		pentaKoch(levels-1,length/3)
		droite(72.0)
		pentaKoch(levels-1,length/3)
		gauche(108.0)
		pentaKoch(levels-1,length/3)
}
